--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
         <div class="row testimonials-header">
             <div class="col-full">
-                <h1 class="h02">What People Say.</h1>
+                <h1 class="h02">Десятки успешных учеников</h1>
             </div>
         </div>
 
