--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
             <div class="row home-content__main">
 
-                <h3>Hello There</h3>
+                <h3>Татьяна Толстова</h3>
 
                 <h1>
-                    I am Jonathan Doe. <br>
-                    I am a graphic & UI/UX <br>
-                    designer based in Somewhere.
+                    Репетитор по английскому языку <br>
+                    ОГЭ, ЕГЭ, саморазвитие <br>
+                    Десятки довольных учеников!
                 </h1>
 
                 <div class="home-content__buttons">
