--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
                 <li><a class="smoothscroll"  href="#blog" title="blog">Blog</a></li>
+                <li><a class="smoothscroll"  href="#feedback" title="feedback">Feedback</a></li>
                 <li><a class="smoothscroll"  href="#contact" title="contact">Contact</a></li>
             </ul>
         </nav>
@@ -80,9 +81,6 @@
                 </h1>
 
                 <div class="home-content__buttons">
-                    <a href="#works" class="smoothscroll btn btn--stroke">
-                        Latest Projects
-                    </a>
                     <a href="#about" class="smoothscroll btn btn--stroke">
                         More About Me
                     </a>
@@ -251,6 +249,7 @@
 
     <!-- testimonials
     ================================================== -->
+    <section id="feedback">
     <div class="s-testimonials">
 
         <div class="overlay"></div>
@@ -300,7 +299,7 @@
         </div> <!-- end testimonials -->
 
     </div> <!-- end s-testimonials -->
-
+    </section>  
 
     <!-- blog
     ================================================== -->
@@ -410,17 +409,17 @@
                 </div>
                 <h4>Баллы ЕГЭ</h4>
             </div>
-            <div class="col-block stats__col stats__col--highlight">
+            <div class="col-block stats__col">
                 <div class="stats__count">
                     5
                 </div>
                 <h4>Оценка ОГЭ</h4>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">
-                    101
+                <div class="stats__count2">
+                    ∞
                 </div>
-                <h4>Happy Clients</h4> 
+                <h4>Удовольствие от учебы</h4> 
             </div>
 
         </div>
@@ -443,20 +442,7 @@
         </div>
 
         <div class="row contact__main">
-            <div class="col-eight tab-full contact__form">
 
-
-                <!-- contact-warning -->
-                <div class="message-warning">
-                    Something went wrong. Please try again.
-                </div> 
-            
-                <!-- contact-success -->
-                <div class="message-success">
-                    Your message was sent, thank you!<br>
-                </div>
-                        
-            </div>
             <div class="col-four tab-full contact__infos">
                 <h4 class="h06">Phone</h4>
                 <p>Phone: (+63) 555 1212<br>
