--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a class="site-logo" href="index.html"><img src="images/logo.png" alt="Homepage"></a>
+            <a class="site-logo" href="index.html"><img src="images/logo2.png" width="40" height="40" alt="Homepage"></a>
         </div>
 
         <nav class="header-nav-wrap">
@@ -76,8 +76,7 @@
 
                 <h1>
                     Репетитор по английскому языку <br>
-                    ОГЭ, ЕГЭ, саморазвитие <br>
-                    Десятки довольных учеников!
+                    ОГЭ, ЕГЭ, саморазвитие
                 </h1>
 
                 <div class="home-content__buttons">
