--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     <!-- header
     ================================================== -->
     <header class="s-header">
-
         <div class="header-logo">
             <a class="site-logo" href="index.html"><img src="images/logo2.png" width="40" height="40" alt="Homepage"></a>
         </div>
@@ -466,7 +465,62 @@
 
     </section> <!-- end s-contact -->
 
-
+    <div class="txt-alegreyasans-bold">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-medium">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-thin">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-black">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-italic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-bolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-extrabold">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-light">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-extrabolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-thinitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-mediumitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-regular">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-light">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-bolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-extrabolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-blackitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-black">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-italic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-lightitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-thinitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-mediumitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-lightitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-bold">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-regular">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-extrabold">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-thin">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasans-blackitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
+        <div class="txt-alegreyasanssc-medium">Lorem ipsum dolor sit amet, consectetur consequat.
+        Лорем ипсум 123</div>
     <!-- footer
     ================================================== -->
     <footer>
@@ -530,6 +584,7 @@
         <div id="loader"></div>
     </div>
 
+    
 
     <!-- Java Script
     ================================================== -->
