--- a/index.html
+++ b/index.html
@@ -465,61 +465,61 @@
 
     </section> <!-- end s-contact -->
 
-    <div class="txt-alegreyasans-bold">Lorem ipsum dolor sit amet, consectetur consequat.
+    <div class="txt-alegreyasanssc-medium">alegreyasanssc-medium|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-medium">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-regular">alegreyasans-regular|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-thin">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-black">alegreyasans-black|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-black">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-blackitalic">alegreyasanssc-blackitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-italic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-extrabold">alegreyasans-extrabold|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-bolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-mediumitalic">alegreyasanssc-mediumitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-extrabold">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-lightitalic">alegreyasans-lightitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-light">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-bolditalic">alegreyasanssc-bolditalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-extrabolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-extrabolditalic">alegreyasans-extrabolditalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-thinitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-thinitalic">alegreyasans-thinitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-mediumitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-extrabold">alegreyasanssc-extrabold|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-regular">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-light">alegreyasanssc-light|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-light">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-bolditalic">alegreyasans-bolditalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-bolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-italic">alegreyasans-italic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-extrabolditalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-thin">alegreyasans-thin|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-blackitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-bold">alegreyasans-bold|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-black">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-italic">alegreyasanssc-italic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-italic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-regular">alegreyasanssc-regular|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-lightitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-blackitalic">alegreyasans-blackitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-thinitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-mediumitalic">alegreyasans-mediumitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-mediumitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-light">alegreyasans-light|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-lightitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-lightitalic">alegreyasanssc-lightitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-bold">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasans-medium">alegreyasans-medium|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-regular">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-thinitalic">alegreyasanssc-thinitalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-extrabold">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-thin">alegreyasanssc-thin|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-thin">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-extrabolditalic">alegreyasanssc-extrabolditalic|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasans-blackitalic">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-black">alegreyasanssc-black|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
-        <div class="txt-alegreyasanssc-medium">Lorem ipsum dolor sit amet, consectetur consequat.
+        <div class="txt-alegreyasanssc-bold">alegreyasanssc-bold|Lorem ipsum dolor sit amet, consectetur consequat.
         Лорем ипсум 123</div>
     <!-- footer
     ================================================== -->
