--- a/index.html
+++ b/index.html
@@ -71,46 +71,24 @@
 
             <div class="row home-content__main">
 
-                <h3>Татьяна Толстова</h3>
+                <h3>Татьяна</h3>
 
                 <h1>
-                    Репетитор по английскому языку <br>
-                    ОГЭ, ЕГЭ, саморазвитие
+                    Уроки английского языка: <br>
+                    ОГЭ, ЕГЭ, школьная программа и разговорная речь
                 </h1>
 
                 <div class="home-content__buttons">
                     <a href="#about" class="smoothscroll btn btn--stroke">
-                        More About Me
+                        Обо мне
                     </a>
                 </div>
 
-                <div class="home-content__scroll">
-                    <a href="#about" class="scroll-link smoothscroll">
-                        <span>Scroll Down</span>
-                    </a>
-                </div>
 
             </div>
 
         </div> <!-- end home-content -->
 
-        <ul class="home-social">
-            <li>
-                <a href="#"><i class="im im-facebook" aria-hidden="true"></i><span>Facebook</span></a>
-            </li>
-            <li>
-                <a href="#"><i class="im im-twitter" aria-hidden="true"></i><span>Twiiter</span></a>
-            </li>
-            <li>
-                <a href="#"><i class="im im-instagram" aria-hidden="true"></i><span>Instagram</span></a>
-            </li>
-            <li>
-                <a href="#"><i class="im im-behance" aria-hidden="true"></i><span>Behance</span></a>
-            </li>
-            <li>
-                <a href="#"><i class="im im-pinterest" aria-hidden="true"></i><span>Pinterest</span></a>
-            </li>
-        </ul> 
         <!-- end home-social -->
 
     </section> <!-- end s-home -->
@@ -120,23 +98,16 @@
     ================================================== -->
     <section id="about" class="s-about target-section">
         
-        <div class="row narrow section-intro has-bottom-sep">
-            <div class="col-full text-center">
-                <h3>About</h3>
-                <h1>More About Me</h1>
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
-            </div>
-        </div>
 
         <div class="row about-content">
 
             <div class="col-six tab-full left">
-                <h3>Howdy!</h3>
+                <h3>Обо мне</h3>
 
-                <p>Lorem ipsum Ut eiusmod ex magna sit dolor esse adipisicing minim ad cupidatat eu veniam nostrud mollit laboris sunt magna velit culpa consectetur nostrud consectetur labore sed do.</p>
+                <p>Я полюбила английский язык и саму идею преподавания в старшей школе, но не сразу решила, что хочу быть учителем. Я училась в техническом университете и по вечерам посещала курсы переводчика. Немного позднее у меня родилась дочь и я начала давать частные уроки. Я занималась с детьми знакомых, родственников, соседей. Спустя много лет вернулась к учебе и получила диплом профессиональной подготовке, стала дипломированным учителем, расширила свои навыки в преподавании, изучила современные методики.</p>
 
                 <p>
-                Lorem ipsum Nisi officia Duis irure voluptate dolor commodo pariatur occaecat aliquip adipisicing voluptate Ut in qui ea sint occaecat in commodo in in in incididunt ut sunt in Ut Duis in ut ex qui anim cupidatat cupidatat ex in non dolore labore ea amet cillum ea qui dolor nisi sed velit mollit exercitation ex fugiat labore in deserunt culpa laborum culpa anim dolore laboris amet irure mollit proident velit fugiat aute ea elit magna consequat qui officia quis elit Duis dolor esse cupidatat tempor proident voluptate aliqua ex cupidatat do eiusmod veniam irure laborum ut magna nostrud dolore ullamco commodo elit sit magna aliqua laborum veniam officia dolor.	
+                За годы своей работы я встретила разных учеников.	
                 </p>
             </div>
 
